# desktopNote

./: .gitignore  .npmrc  README.md  app.py  index.html  notes.db  package-lock.json  package.json  run.bat  tsconfig.json  vite.config.ts
electron/: dev.cjs  main.cjs  preload.cjs
release/: builder-debug.yml  builder-effective-config.yaml  latest.yml
release/win-unpacked/resources/: app-update.yml
src/: App.tsx  App.vue  MarkdownPreview.tsx  MarkdownPreview.vue  SettingsPanel.tsx  SettingsPanel.vue  Tile.tsx  Tile.vue  api.ts  main.ts  shims.d.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
